--- a/public/main.html
+++ b/public/main.html
@@ -3,18 +3,17 @@
         <source src="static/music/Otokaze.mp3">
     </audio>
 </div>
-<div id="background-img"></div>
 <div id="menu-wrapper">
-    <a href="a/main.html" title="动画">
+    <a href="/a" title="动画">
         <div id="menu1" class="menu case-border"></div>
     </a>
-    <a href="#" title="漫画">
+    <a href="/c" title="漫画">
         <div id="menu2" class="menu case-border"></div>
     </a>
-    <a href="#" title="游戏">
+    <a href="/g" title="游戏">
         <div id="menu3" class="menu case-border"></div>
     </a>
-    <a href="#" title="音乐">
+    <a href="/m" title="音乐">
         <div id="menu4" class="menu case-border"></div>
     </a>
 </div>
