--- a/public/animation.html
+++ b/public/animation.html
@@ -9,7 +9,7 @@
         <div class="container">
             <div class="crumbs"><a href="#">主页</a> / {{crumbs}}</div>
             <div class="item">
-                        <a href="#">
+                        <a href="/a/page">
                             <div class="content">
                                 <header>我的世界</header>
                                 <footer>3<div>主题</div></footer>
