--- a/public/main.html
+++ b/public/main.html
@@ -1,6 +1,6 @@
 <div>
     <audio>
-        <source src="static/music/Otokaze.mp3">
+        <source src="music/Otokaze1.mp3">
     </audio>
 </div>
 <div id="menu-wrapper">
