--- a/public/page.html
+++ b/public/page.html
@@ -1,92 +1,30 @@
-<div id="menu" nav>
-    <div id="close" class="row">关闭</div>
-    <label class="splite"></label>
-    <div id="open" class="row">发帖</div>
-    <label class="splite"></label>
-    <div class="row"><img src="images/img1.jpg" alt="头像"></div>
-</div>
-<div id="menu-btn"></div>
-<div class="container">
-    <div class="crumbs"><a href="#">主页</a> / {{crumbs}}</div>
-    <div class="item">
-        <a href="#">
-            <div class="content">
-                <header>我的世界</header>
-                <footer>3<div>主题</div></footer>
+    <div class="category" ng-repeat="topic in topics">
+        <div class="category-author-pic">
+            <a href="#"><img ng-src="{{topic.user_id.face}}" src="images/default.jpg" alt="头像"></a>
+        </div>
+        <div class="category-profile">
+            <div class="option">
+                <strong>{{topic.profile.replyCount}}</strong>
+                <small>回复</small>
             </div>
-            <img src="images/a/minecraft.jpg" alt="头像">
-        </a>
-    </div>
-    <div class="item">
-        <div class="category clearfloat">
-            <div class="category-pic">
-                <a href="#"><img class="face" src="images/img2.jpg" alt="头像"></a>
+            <div class="option">
+                <strong>{{topic.view}}</strong>
+                <small>浏览</small>
             </div>
-            <div class="category-text">
-                <a>ex元素点燃值得点吗？似乎也就多加了100点智力左右</a>
+            <div class="option">
+                <div>
+                    <a href="#">
+                        <img ng-src="{{topic.profile.commenter.face}}" src="images/default.jpg" alt="img">
+                    </a>
+                    <a href="#">{{topic.profile.commenter.replyDate|date}}</a>
+                </div>
+                <small>最后回复</small>
             </div>
         </div>
-    </div>
-    <div class="item">
-        <div class="category clearfloat">
-            <div class="category-pic">
-                <a href="#"><img class="face" src="images/img3.jpg" alt="头像"></a>
+        <div class="category-post">
+            <div class="category-post-title">
+                <a href="{{url}}/{{topic._id}}/{{topic.title}}">{{topic.title}}</a>
             </div>
-            <div class="category-text">
-                <a>Who is using NodeBB</a>
-            </div>
+            <div class="category-post-time">{{topic.createDate|date}}</div>
         </div>
     </div>
-    <div class="item">
-        <div class="category clearfloat">
-            <div class="category-pic">
-                <a href="#"><img class="face" src="images/img4.jpg" alt="头像"></a>
-            </div>
-            <div class="category-text">
-                <a><span>这是一个悲伤的故事</span></a>
-            </div>
-        </div>
-    </div>
-    <div class="item">
-        <div class="category clearfloat">
-            <div class="category-pic">
-                <a href="#"><img class="face" src="images/img5.jpg" alt="头像"></a>
-            </div>
-            <div class="category-text">
-                <a><span>这是一个悲伤的故事</span></a>
-            </div>
-        </div>
-    </div>
-    <div class="item">
-        <div class="category clearfloat">
-            <div class="category-pic">
-                <a href="#"><img class="face" src="images/img6.jpg" alt="头像"></a>
-            </div>
-            <div class="category-text">
-                <a><span>这是一个悲伤的故事</span></a>
-            </div>
-        </div>
-    </div>
-    <div class="item">
-        <div class="category clearfloat">
-            <div class="category-pic">
-                <a href="#"><img class="face" src="images/img7.jpg" alt="头像"></a>
-            </div>
-            <div class="category-text">
-                <a><span>这是一个悲伤的故事</span></a>
-            </div>
-        </div>
-    </div>
-</div>
-<!--<div class="editor">-->
-<!--<div class="editor_container">-->
-<!--<textarea name="description" id="id_description" class="rte-zone">jQuery RTE 1</textarea>-->
-<!--</div>-->
-<!--</div>-->
-<!--<script type="text/javascript" src="../static/plugins/editor/js//jquery.rte.js"></script>-->
-<!--<script type="text/javascript">-->
-<!--$(".rte-zone").rte({-->
-<!--content_css_url: "../static/plugins/editor/css/editor.css",-->
-<!--media_url: "../static/plugins/editor/images/"-->
-<!--});-->
-<!--</script>-->
