--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
     <meta name="viewport" content="width=device-width">
     <link href="css/common.css" type="text/css" rel="stylesheet">
     <script src="js/vendor/jquery/jquery.min.js"></script>
+    <script src="js/vendor/upload/angular-file-upload-html5-shim.min.js"></script>
     <script src="js/vendor/angularjs/angular.js"></script>
+    <script src="js/vendor/upload/angular-file-upload.min.js"></script>
     <script src="js/vendor/angularjs/angular-resource.js"></script>
     <script src="js/vendor/angularjs/angular-route.js"></script>
     <script src="js/vendor/angularjs/angular-cookies.min.js"></script>
@@ -23,7 +25,8 @@
 <!--[if lt IE 10]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
-<div id="background-img"></div>
+<div id="background-img">
+</div>
 <div class="loading-bar"></div>
 <div id="message">啦啦啦</div>
 <div id="menu" nav>
@@ -32,7 +35,10 @@
 
     <div id="open" class="row" ng-click="showEditor = true" ng-show="showOpenEditor&&isUser">发帖</div>
     <label class="splite"></label>
-    <div class="row" ng-show="isUser"><img src="images/img1.jpg" alt="头像"></div>
+    <div class="row" ng-show="user">
+        <a href="/user">
+            <img ng-src="{{user.face}}" src="images/default.jpg" alt="头像">
+        </a></div>
     <label class="splite"></label>
     <div class="row">
         <a href="/login"  ng-if="!isUser">登陆/注册</a>
