去掉主页音乐

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 </div>
 <div id="menu-btn"></div>
 <div class="container">
-    <div class="crumbs" ng-show="showCrumb"><a href="#">主页</a> / {{crumbs}}</div>
+    <div class="crumbs" ng-show="showCrumb"><a href="#">主页</a> / {{crumb}}</div>
     <div class="ng-view clearfloat">
         <div ng-view></div>
     </div>
