--- a/public/login.html
+++ b/public/login.html
@@ -2,29 +2,29 @@
     <form id="login" ng-submit="login()">
         <div class="field">
             <label>邮箱</label>
-            <input placeholder="邮箱" autofocus="true" pattern="^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$" title="请输入6-20位的字符" ng-model="login_email">
+            <input placeholder="邮箱" autofocus="true" pattern="^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$" title="例如:xxxx@qq.com" ng-model="login_email" tabindex="1">
         </div>
         <div class="field">
             <label>密码</label>
-            <input type="password" placeholder="密码" pattern="\w{6,20}" ng-model="login_password">
+            <input type="password" placeholder="密码" pattern="\w{6,20}" ng-model="login_password" tabindex="2">
         </div>
         <div>
-            <button id="post" type="submit" class="btn blue">登陆</button>
-            <button id="change" type="button" class="btn blue">注册</button>
+            <button id="post" type="submit" class="btn blue" tabindex="3">登陆</button>
+            <button id="change" type="button" class="btn blue" tabindex="4">注册</button>
         </div>
     </form>
     <form id="register" class="hide" ng-submit="regist()">
         <div class="field">
             <label>邮箱</label>
-            <input type="email" placeholder="邮箱" ng-model="register_email">
+            <input type="email" placeholder="邮箱" ng-model="register_email" tabindex="1">
         </div>
         <div class="field">
             <label>密码</label>
-            <input type="password" placeholder="密码" pattern="\w{6,20}" title="请输入6到20位之间的字符" ng-model="register_password">
+            <input type="password" placeholder="密码" pattern="\w{6,20}" title="请输入6到20位之间的字符" ng-model="register_password" tabindex="2">
         </div>
         <div class="field">
             <label>昵称</label>
-            <input placeholder="昵称" pattern="^[A-Za-z0-9\u4e00-\u9fa5]{2,10}$" title="请输入2-10位的汉字或字符" ng-model="register_nick">
+            <input placeholder="昵称" pattern="^[A-Za-z0-9\u4e00-\u9fa5]{2,10}$" title="请输入2-10位的汉字或字符" ng-model="register_nick" tabindex="3">
         </div>
         <div>
             <button id="save" class="btn blue" type="submit">确认</button>
