--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <div id="close" class="row">关闭</div>
     <label class="splite"></label>
 
-    <div id="open" class="row" ng-click="showEditor = true" ng-show="showOpenEditor&&isUser">发帖</div>
+    <div id="open" class="row" ng-click="showEditor = true" ng-show="showOpenEditor&isUser">发帖</div>
     <label class="splite"></label>
     <div class="row" ng-show="user">
         <a href="/user">
