--- a/public/topic.html
+++ b/public/topic.html
@@ -1,8 +1,8 @@
             <ul class="topic-ul">
                 <li class="topic-item clearfloat">
                     <div class="topic-left">
-                        <img class="face" ng-src="uploads/faces/{{topic.topic.face}}" src="images/default.jpg" alt="img">
-                        <p>{{topic.topic.nick}}</p>
+                        <img class="face" ng-src="uploads/faces/{{topic.topic.user_id.face}}" src="images/default.jpg" alt="img">
+                        <p>{{topic.topic.user_id.nick}}</p>
                     </div>
                     <div class="topic-right">
                         <header><span class="btn right small">收藏</span>{{topic.topic.title}}</header>
