--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <label class="splite"></label>
     <div class="row" ng-show="User!==undefined">
         <a href="/user">
-            <img ng-src="{{User.face}}" src="images/default.jpg" alt="头像">
+            <img ng-src="uploads/faces/{{User.face}}" src="images/default.jpg" alt="头像">
         </a></div>
     <label class="splite"></label>
     <div class="row">
