发送3次请求的bug

--- a/public/index.html
+++ b/public/index.html
@@ -50,9 +50,9 @@
 <div id="menu-btn"></div>
 <div class="container">
     <div class="crumbs" ng-show="showCrumb"><a href="#">主页</a> / {{crumb}}</div>
-    <div class="ng-view clearfloat">
+    <!--<div class="ng-view clearfloat">-->
         <div ng-view></div>
-    </div>
+    <!--</div>-->
 </div>
 <div class="editor" ng-show="showEditor">
     <div class="editor_container">
