--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 <div id="background-img">
 </div>
 <div class="loading-bar"></div>
-<div id="message">啦啦啦</div>
+<div id="message"></div>
 <div id="menu" nav>
     <div id="close" class="row">关闭</div>
     <label class="splite"></label>
