--- a/public/index.html
+++ b/public/index.html
@@ -56,10 +56,9 @@
             <label compile="crumb"></label>
         </span>
     </div>
-    <!--<div class="ng-view clearfloat">-->
     <div ng-view></div>
-    <!--</div>-->
 </div>
+<div class="toTop"></div>
 <div class="editor" ng-show="showEditor">
     <div class="editor_container">
         <textarea name="description" id="id_description" class="rte-zone"></textarea>
