--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,13 @@
     <script src="js/vendor/angularjs/angular-resource.min.js"></script>
     <script src="js/vendor/angularjs/angular-route.min.js"></script>
     <script src="js/vendor/angularjs/angular-cookies.min.js"></script>
-    <script src="js/acgfun.min.js"></script>
+    <script src="js/socket.js"></script>
+    <!--<script src="js/acgfun.min.js"></script>-->
+    <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/directives.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/filters.js"></script>
     <base href="/index.html">
 </head>
 <body>
@@ -59,6 +65,18 @@
     <div class="editor_container">
         <textarea name="description" id="id_description" class="rte-zone"></textarea>
     </div>
+</div>
+<div class="chat-btn"></div>
+<div class="chat-panel">
+    <div class="chat-dialog">
+        <p class="chat">
+            <span class="username">夏恋:</span>
+            <span>大家好啊</span>
+        </p>
+    </div>
+</div>
+<div class="chat-input" ng-show="showChatInput">
+    <input placeholder="按回车键发表评论" pattern=".+">
 </div>
 <script type="text/javascript" src="vendor/editor/js/jquery.rte.js"></script>
 <script type="text/javascript">
