--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,8 @@
     <script src="js/vendor/angularjs/angular-resource.min.js"></script>
     <script src="js/vendor/angularjs/angular-route.min.js"></script>
     <script src="js/vendor/angularjs/angular-cookies.min.js"></script>
-    <script src="js/socket.js"></script>
-    <!--<script src="js/acgfun.min.js"></script>-->
-    <script src="js/app.js"></script>
-    <script src="js/services.js"></script>
-    <script src="js/directives.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/filters.js"></script>
+    <script src="js/vendor/base64/base64.min.js"></script>
+    <script src="js/acgfun.min.js"></script>
     <base href="/index.html">
 </head>
 <body>
@@ -68,15 +63,11 @@
 </div>
 <div class="chat-btn"></div>
 <div class="chat-panel">
-    <div class="chat-dialog">
-        <p class="chat">
-            <span class="username">夏恋:</span>
-            <span>大家好啊</span>
-        </p>
+    <ul class="chat-dialog">
+    </ul>
+    <div class="chat-input" ng-if="User!==undefined">
+        <input placeholder="按回车键发表评论" pattern=".+">
     </div>
-</div>
-<div class="chat-input" ng-show="showChatInput">
-    <input placeholder="按回车键发表评论" pattern=".+">
 </div>
 <script type="text/javascript" src="vendor/editor/js/jquery.rte.js"></script>
 <script type="text/javascript">
