--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,13 @@
     <script src="js/vendor/angularjs/angular-route.min.js"></script>
     <script src="js/vendor/angularjs/angular-cookies.min.js"></script>
     <script src="js/vendor/base64/base64.min.js"></script>
-    <script src="js/acgfun.min.js"></script>
+    <!--<script src="js/acgfun.min.js"></script>-->
+    <script src="js/socket.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/directives.js"></script>
+    <script src="js/filters.js"></script>
     <base href="/index.html">
 </head>
 <body>
@@ -59,14 +65,6 @@
 <div class="editor" ng-show="showEditor">
     <div class="editor_container">
         <textarea name="description" id="id_description" class="rte-zone"></textarea>
-    </div>
-</div>
-<div class="chat-btn"></div>
-<div class="chat-panel">
-    <ul class="chat-dialog">
-    </ul>
-    <div class="chat-input" ng-if="User!==undefined">
-        <input placeholder="按回车键发表评论" pattern=".+">
     </div>
 </div>
 <script type="text/javascript" src="vendor/editor/js/jquery.rte.js"></script>
