--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,8 @@
             <img ng-src="uploads/faces/{{User.face}}" src="images/default.jpg" alt="头像">
         </a></div>
     <label class="splite"></label>
-
+    <div class="row"><a href="/plaza">广场</a></div>
+    <label class="splite"></label>
     <div class="row">
         <a href="/login" ng-if="User===undefined">登陆/注册</a>
         <span ng-click="signOut()" ng-if="User!==undefined">登出</span>
