--- a/public/plaza.html
+++ b/public/plaza.html
@@ -3,7 +3,7 @@
 <div class="chat-panel">
     <ul class="chat-dialog">
     </ul>
-    <div class="chat-input" ng-if="User!==undefined">
+    <div class="chat-input" ng-if="User._id!==undefined">
         <input placeholder="按回车键发表评论" pattern=".+">
     </div>
 </div>
