--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,7 @@
     <script src="js/vendor/angularjs/angular-route.min.js"></script>
     <script src="js/vendor/angularjs/angular-cookies.min.js"></script>
     <script src="js/vendor/base64/base64.min.js"></script>
-    <!--<script src="js/acgfun.min.js"></script>-->
-    <script src="js/socket.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/services.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/directives.js"></script>
-    <script src="js/filters.js"></script>
+    <script src="js/acgfun.min.js"></script>
     <base href="/index.html">
 </head>
 <body>
@@ -35,10 +29,10 @@
 <div class="loading-bar"></div>
 <div id="message"></div>
 <div id="menu" nav>
-    <div id="close" class="row">关闭</div>
+    <div id="close" class="row"><span>关闭</span></div>
     <label class="splite"></label>
 
-    <div id="open" class="row" ng-click="showEditor = true" ng-show="showOpenEditor&&User!==undefined">发帖</div>
+    <div id="open" class="row" ng-click="showEditor = true" ng-show="showOpenEditor&&User!==undefined"><span>发帖</span></div>
     <label class="splite"></label>
 
     <div class="row face" ng-show="User!==undefined">
