--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
-﻿<!doctype>
+﻿<!DOCTYPE html>
 <html lang="en" ng-app="acgfun">
 <head>
     <title>acgfun</title>
     <meta charset="UTF-8">
     <meta name="description" content="acg 动漫 游戏 音乐">
     <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
     <link href="css/common.css" type="text/css" rel="stylesheet">
     <script src="js/vendor/jquery/jquery.min.js"></script>
@@ -71,7 +71,7 @@
 </div>
 <!--消息-->
 <div class="modal-div" ng-show="showChatModal">
-    <audio src="music/notification.wav">
+    <audio src="music/notification.mp3">
     </audio>
     <div class="modal chat" chat>
         <div class="modal-header clearfloat">
