ng-class for onlinestatus

--- a/public/user.html
+++ b/public/user.html
@@ -10,7 +10,7 @@
             <div>{{userData.user.nick}}</div>
             <div user-function>
                 <label class="follow" title="关注"></label>
-                <label id="online_{{userData.user._id}}" class="offline" title="离线"></label>
+                <label id="online_{{userData.user._id}}" class="ng-class:userData.user.online===1?'online':'offline';" title="{{userData.user.online===1?'在线':'离线'}}"></label>
                 <label class="chat" title="聊天" ng-click="showChat(userData.user)"></label>
             </div>
         </div>
